Update community summary dropdown cards to match data explorer, fix x overflow

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -275,3 +275,8 @@
   @extend .hero-section;
   background-image: linear-gradient(rgba(0, 47, 95, 0.6), rgba(255, 255, 255, 0.6)), url('landscape_pc-gwen-holdmann.jpg');
 }
+
+#community-data-hero {
+  @extend .hero-section;
+  background-image: linear-gradient(rgba(0, 47, 95, 0.6), rgba(255, 255, 255, 0.6));
+  }
